# promt-cls-core

./: main.py  pyproject.toml
dataset/: router_corpus.parquet
src/prompt_cls_core/: build.py
src/prompt_cls_core/data/: dataset.py  generator.py  main.py  schema.py
src/prompt_cls_core/ops/config/: basic.yml  corpus.yml
src/prompt_cls_core/ops/etl/: main.py  schema.py
src/promt_cls_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
