[project]
name = "promt-cls-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

dependencies = [
    "mlflow-skinny>=2.17.2",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
