[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promt-cls-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.1.0",
    "mlflow-skinny>=2.17.2",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.3.2",
    "torch>=2.3"
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
